[package]
name = "php-engine-cnb"
version = "0.1.0"
authors = ["David Zuelke <dzuelke@salesforce.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
flate2 = "1"
libcnb = "0.2.0"
serde = "1.0.126"
sha2 = "0.9"
tar = "0.4"
tempfile = "^3.2.0"
thiserror = "1.0"
toml = "^0.5.8"
ureq = "1.5.4"

[dev-dependencies]
assert_matches = "1.5.0"
